opam-version: "1.2"
maintainer: "<unixjunkie@sdf.org>"
authors: ["Francois Berenger"]
homepage: "https://github.com/UnixJunkie/parpair"
bug-reports: "https://github.com/UnixJunkie/parpair/issues"
dev-repo: "https://github.com/UnixJunkie/parpair.git"
license: "LGPL"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
build-test: [
  ["jbuilder" "runtest" "-p" name]
]
depends: [
  "jbuilder" {build}
  "base-unix"
]
